--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,26 @@
+# ?????? ?? ??
 server.port = 8080
 application.name = spring-demo
+
+# MYSQL ?? ??
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Kjh950330!
+
+# mysql ??
+spring.jpa.database=mysql
+
+# ???? ?? ?? ??
+spring.jpa.properties.hibernate.show_sql=true
+
+# ???? ???? ??? ???? ?? ???
+spring.jpa.properties.hibernate.format_sql = true
+
+# ??? ???? ???? ??? ???? ??
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.defer-datasource-initialization=true
