--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
+spring.devtools.livereload.enabled=true
+
+# Thymeleaf cache ?? ??
+spring.thymeleaf.cache=false
