회원가입 기능 구현하기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.devtools.livereload.enabled=true
 
 # Thymeleaf cache ?? ??
 spring.thymeleaf.cache=false
+
+spring.main.allow-circular-references=true
