--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,22 @@ spring.jpa.properties.hibernate.format_sql = true
 # ??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.devtools.livereload.enabled=true
+
+# ?? ? ?? ?? ???
+spring.servlet.multipart.max-file-size=20MB
+
+# ??? ?? ?? ??
+spring.servlet.multipart.max-request-size=100MB
+
+# ?? ??? ??? ??
+itemImgLocation=C:\\Spring_Shop\\item
+
+# ??? ??? ??
+uploadPath=file:///C:/Spring_Shop
 
 # Thymeleaf cache ?? ??
 spring.thymeleaf.cache=false
