--- a/pom.xml
+++ b/pom.xml
@@ -53,13 +53,13 @@
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
-			<version>5.0.0</version>
+			<!-- <version>5.0.0</version> -->
 		</dependency>
 
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
-			<version>5.0.0</version>
+			<!-- <version>5.0.0</version> -->
 		</dependency>
 
 		<dependency>
