장바구니 상품 주문하기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,5 @@ spring.main.allow-circular-references=true
 
 # ?? batch size ??
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+spring.mvc.hiddenmethod.filter.enabled=true
