--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.database=mysql
 spring.jpa.properties.hibernate.show_sql=true
 
 # ???? ???? ??? ???? ?? ???
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.format_sql=true
 
 # ??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
@@ -33,13 +33,15 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # ?? ??? ??? ??
-itemImgLocation=C:\\Spring_Shop\\item
+itemImgLocation=C:/Spring_Shop/item
 
 # ??? ??? ??
-uploadPath=file:///C:/Spring_Shop
+uploadPath=file:///C:/Spring_Shop/
 
 # Thymeleaf cache ?? ??
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.resources.static-locations=file:src/main/resources/static/
 
 spring.main.allow-circular-references=true
 
