--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # ??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.devtools.livereload.enabled=true
