--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
@@ -34,3 +35,6 @@ build/
 
 ### OAUTH ###
 application-oauth.properties
+
+
+
