--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
 			<version>5.3.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
