--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>5.8.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
